# haskell-hw2

./: LICENSE  README.md  hw2.cabal  run.sh
app/: Main.hs
src/: Commands.hs  CommandsImpl.hs  Lib.hs  Parser.hs  PrintUtils.hs  Structures.hs  VCS.hs
test_folder/: apple.txt
test_folder/etc/: filt.txt
test_folder/users/: .commits  ao.txt  b.txt  dog.txt  me.to
